# MVP

./: .editorconfig  .env.example  .gitignore  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  README.md  compose.yaml  pyproject.toml  pytest.ini
backend/app/: __init__.py  main.py
backend/app/application/: state.py
backend/app/domain/: __init__.py  exceptions.py
backend/app/infrastructure/: __init__.py
backend/app/presentation/: __init__.py
backend/data/: trees.json
backend/data/device/: coffeemachine.json  fake-simile.json  fake.json
backend/data/sessions/: 09258922-5ea1-4d17-b408-2d1e36da4841.json  0e4d93a9-0a76-44f0-8902-1c24598e676c.json  1337d67f-73ed-421b-8b05-deaf30a0eb4e.json  19544325-942a-4eed-b083-2e0e7dd0ee49.json  28eda48e-8cfd-4043-8a66-a1e9790e0e23.json  2ebd1326-82c8-4ff3-8671-c3c8ec730fd5.json  307f955e-f357-4801-b294-bdb5347e9dae.json  341ea161-4bc3-4b5b-a7c7-9fa939d7e43e.json  41e3676d-52b4-4fb7-949c-194b949501b4.json  4b4feec4-9c2a-48b6-b22d-d7cb5c5ad486.json  688ff2a4-6ab2-4508-901e-1981da8e519e.json  69b2ea79-96e6-4a17-8819-a552da6c4436.json  6dd1fbf4-c394-454b-aaee-174076395857.json  6dd55e33-d803-490f-83f6-13e714bcfc9b.json  6ea2aac1-3017-4371-a750-dbf1587296c7.json  7ea19476-3bf0-415d-895c-dade05842ae4.json  8068fbc4-a45d-448e-894f-267f40abdff5.json  84f1e2c0-578b-46ef-bbc6-b77be244be71.json  8764ee8a-1031-423a-8e80-5ae1626f2a44.json  8ae04e2a-a03e-4041-b051-140ed17c2fd8.json  9026c542-88ee-428d-9a4e-29250de1734c.json  91f4daa8-1db1-4d3a-a0bb-3b3204255a3c.json  a725654b-27bd-41de-be0d-acd35f30a5da.json  b0c8b310-4222-40a0-98ab-65d6d2201e29.json  completa.json  sessioneprova.json  (+2 more)
backend/tests/: __init__.py  conftest.py
(+424 files in other folders)
